# maw-board

./: Cargo.toml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build-app.yml  build-connector.yml
crates/sshx-core/proto/: sshx.proto
crates/sshx-core/src/: lib.rs
crates/sshx-server/: Cargo.toml
crates/sshx-server/migrations/: 0001_accounts.sql  0002_capabilities.sql
crates/sshx-server/src/: auth.rs  grpc.rs  lib.rs  listen.rs  main.rs  session.rs  state.rs  web.rs
crates/sshx-server/src/session/: snapshot.rs
crates/sshx-server/src/state/: accounts.rs  disk.rs
crates/sshx-server/src/web/: pages.rs  protocol.rs  socket.rs
crates/sshx-server/tests/: join.rs  snapshot.rs  with_client.rs
crates/sshx-server/tests/common/: mod.rs
crates/sshx/src/: controller.rs  main.rs
oracle-app/: package.json
oracle-app/src/: index.html
oracle-app/src-tauri/: Cargo.toml  tauri.conf.json
oracle-app/src-tauri/src/: lib.rs  main.rs
scripts/: test-snap.mjs
src/: app.css  app.html
src/lib/: Session.svelte  align.ts  board.ts  boardKeys.ts  genModels.ts  jobPayload.ts  orderPayload.ts  protocol.ts  rtc.ts  settings.ts  snap.ts
src/lib/action/: touchZoom.ts
src/lib/ui/: Board.svelte  CameraPreview.svelte  ContextMenu.svelte  FileExplorer.svelte  GroupMenu.svelte  MarkdownDoc.svelte  MembersPanel.svelte  NameList.svelte  NodeDetail.svelte  OracleBoardMenu.svelte  OverlayMenu.svelte  RosterSidebar.svelte  Settings.svelte  StatusBar.svelte  ToastContainer.svelte  Toolbar.svelte  XTerm.svelte  portal.ts
src/routes/: +page.svelte
src/routes/account/: +page.svelte
src/routes/pair/: +page.svelte
