[package]
name = "sshx-server"
version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
edition = "2021"

[dependencies]
aes = "0.8.3"
argon2 = { version = "0.5.2", default-features = false, features = ["alloc", "password-hash", "rand"] }
ctr = "0.9.2"
serde_json = "1.0"
anyhow.workspace = true
async-channel = "1.9.0"
async-stream = "0.3.5"
axum = { version = "0.8.1", features = ["http2", "ws"] }
base64 = "0.21.4"
bytes = { version = "1.5.0", features = ["serde"] }
ciborium = "0.2.1"
clap.workspace = true
dashmap = "5.5.3"
deadpool = "0.12.2"
deadpool-redis = "0.18.0"
futures-util = { version = "0.3.28", features = ["sink"] }
hmac = "0.12.1"
http = "1.2.0"
parking_lot = "0.12.1"
prost.workspace = true
rand.workspace = true
redis = { version = "0.27.6", features = ["tokio-rustls-comp", "tls-rustls-webpki-roots"] }
serde.workspace = true
sha2 = "0.10.7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
sshx-core.workspace = true
subtle = "2.5.0"
sysinfo = "0.33.1"
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite = "0.26.1"
tonic.workspace = true
tonic-reflection.workspace = true
tower = { version = "0.4.13", features = ["steer"] }
tower-http = { version = "0.6.2", features = ["fs", "redirect", "trace", "set-header"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zstd = "0.12.4"

[dev-dependencies]
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls"] }
sshx = { path = "../sshx" }
